--- a/data/news/2016-09-10-abbocca.md
+++ b/data/news/2016-09-10-abbocca.md
@@ -6,9 +6,15 @@ image: berlikete.jpg
 
 Oltre‭ ‬60‭ ‬proposte musicali da mezza Italia in quattro giorni su tre stage.‭ ‬Live band,‭ ‬dj-set,‭ ‬live-set,‭ ‬teatro,‭ ‬3D mapping visual,‭ ‬5‭ ‬punti street food per carnivori,‭ ‬vegan e golosi,‭ ‬2‭ ‬chioschi bar,‭ ‬expo‭ & ‬market area con artigianato,‭ ‬arte,‭ ‬hobbistica,‭ ‬musica,‭ ‬dischi,‭ ‬performance,‭ ‬interazione,‭ ‬2‭ ‬web radio,‭ ‬photo shooting,‭ ‬installazioni e molto altro. Un calibrato caravanserraglio dove a farla da padrona è la musica suonata,‭ ‬underground,‭ ‬originale e indipendente in tutte le sue sfaccettature.‭ ‬Alla base del festival,‭ ‬dopo la precedente edizione targata Leto e CrowsE20,‭ ‬si rinnova un concetto di universalità unito al bisogno di incontrarsi e abbordare nuove esperienze.
 
+### UNO SPECIAL GUEST AL GIORNO
+
 Tra tante proposte nuove,‭ ‬più o meno affermate,‭ ‬emerse o emergenti,‭ ‬e per due terzi nostrane,‭ ‬svettano i nomi di alcuni ospiti di spicco chiamati a rendere particolarmente preziosa ogni serata.‭ ‬Il raffinato e malinconico trip-hop dei riminesi‭ *‬Landlord‭* ‬il giovedì,‭ ‬sulla cresta dell'onda col nuovo singolo‭ "‬Farewell‭" ‬che prelude al secondo album in uscita a fine mese dopo i fasti di‭ "‬Get by‭" ‬e dell'EP di debutto‭ "‬Aside‭"‬.‭ ‬Le solari contaminazioni balcaniche della milanese‭ ‬*Babbutzi Orkestar* il venerdì,‭ ‬reduce dei tanti successi estivi sulla scorta dell'ultimo lavoro‭ "‬Tzuper‭"‬.‭ ‬L'energia elettronica dello storico collettivo torinese‭ *‬LN Ripley* il sabato.‭ ‬Le ardite e ruvide trame rock sperimentali dei milanesi‭ *‬Morkobot* la domenica,‭ ‬che chiuderanno l'edizione presentando per la prima volta dal vivo il nuovissimo album‭ "‬Gorgo‭"‬.
 
+### TENDENZE 2016, UN CARAVANSERRAGLIO UNIVERSALE
+
 Ma questa è solo la punta dell'iceberg,‭ ‬perché Tendenze vuole parlare a tutti e aprirsi verso ogni linguaggio attraverso un cartellone trasversale,‭ ‬poliglotta,‭ ‬multiforme,‭ ‬con tanta musica dal piacentino,‭ ‬dalle province limitrofe e dal resto d'Italia,‭ ‬tra giovani debutti e nomi consolidati,‭ ‬spicchi di storia e ospiti di respiro nazionale.‭ ‬Dal pop alla canzone d'autore,‭ ‬dalle tante facce dell'elettronica alla sperimentazione,‭ ‬dal blues alle mille anime del rock,‭ ‬dal rap alle sonorità acustiche,‭ ‬dalla psichedelia al rock'n'roll,‭ ‬dal metal al punk,‭ ‬dal reggae al funk fino alle intersezioni con il teatro di ricerca contemporaneo.
+
+### QUATTRO GIORNATE PER SALUTARE L'ESTATE
 
 Un caleidoscopio di stimoli sonori,‭ ‬visivi,‭ ‬tattili e gustativi dove immaginiamo che ciascuno possa trovare pane per i propri denti,‭ ‬riconoscersi o stupirsi,‭ ‬esplorare nuovi orizzonti o rifugiarsi tra lande famigliari.‭ ‬Quattro giornate per salutare l'estate.‭ ‬Per coccolare chi fa buona musica e chi ha voglia di ascoltarla.‭ ‬Per abbracciare un'infinità di espressioni creative dopo aver aperto le porte del festival a decine di realtà che abbiamo desiderato e hanno desiderato salire sul carrozzone.‭ ‬Un po‭' ‬come‭ ‬nel bellissimo disegno di‭ *‬Berlikete*,‭ ‬dove‭ ‬il nostro gnomo mascotte‭ ‬viaggia‭ ‬a bordo del suo pesciolone,‭ ‬affamato di luce e di vita.
 
